--- a/src/components/CanvasPage/Canvas.css
+++ b/src/components/CanvasPage/Canvas.css
@@ -1,10 +1,10 @@
-.interaction-container {
+.canvas-container {
     display: flex;
     justify-content: center;
     width: 100%;
 }
 
-.interaction {
+.canvas {
     width: 1320px;
     height: 680px;
 }
